--- a/style.css
+++ b/style.css
@@ -1,64 +1,60 @@
 body {
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-    
-    text-align: center;
-    
-    margin: 0;
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  margin-top: 0;
 }
 
 #hero {
-    width: 592px;
-    margin: 0 auto 72px;
+  margin: auto;
+  text-align: center;
+  width: 579px;  
 }
 
 #hero img {
-    margin-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 h1 {
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: normal;
-    font-style: normal;
-    font-variation-settings:
-    "slnt" 0;    
-    font-size: 49px;
-    line-height: 56px;
-    margin-bottom: 32px;
+  font-family: "Inter", sans-serif;
+  font-size: 49px;
+  line-height: 56px;
+  font-weight: normal;
+  margin-bottom: 32px;
 }
 
 h1 span {
-    font-weight: bold;
+  font-weight: bold;
+  color: #ff9900;
 }
 
 span, a {
-    color: #f90; 
+  color: #ff9900;
 }
 
 p, #footer {
-    color: #7d7987;
-    font-size: 14px;
-    line-height: 28px;
+  color: #7d7987;
+  font-size: 14px;
+  line-height: 28px;
 }
 
-#footer a + a{
-    margin-left: 28px;
+#footer {
+  align-items: self-end;
+  margin: auto;
+  width: 592px;
+  margin-top: 72px;
 }
 
-#line {
-    width: 568px;
-    height: 0;
-    border: 1px solid #ECEFF2;
-    text-align: center;
-    margin: 0 auto 8px;
+#footer a + a {
+  padding-left: 28px;
 }
 
-#balls{
+.line {
+  width: 592px;
+  margin-bottom: 8px;
+  border: 1px solid #ECEFF2;
+}
+
+#balls {
     position: fixed;
     bottom: 0;
     right: 0;
